hphp/hack/test/typecheck/typeconsts/default_basic.php.exp
File "default_basic.php", line 22, characters 9-9:
Invalid argument (Typing[4110])
File "default_basic.php", line 14, characters 18-23:
Expected string
File "default_basic.php", line 6, characters 21-27:
  resulting from expanding the type constant B::T
File "default_basic.php", line 22, characters 9-9:
But got int
